--- a/dashboard/online_help/templates/online_help/assign_task_test.html
+++ b/dashboard/online_help/templates/online_help/assign_task_test.html
@@ -1,3 +1,4 @@
+
 {% extends "online_help/base.html" %}
 {% load static %}
 
@@ -21,6 +22,7 @@
     </ul>
 </div>
 {% endif %}
+
 <form method="post" id="assignForm">
     {% csrf_token %}
     <div class="form-group">
@@ -43,11 +45,12 @@
         {{ form.writer.label_tag }}
         {{ form.writer }}
     </div>
+    <div class="form-group">
+        {{ form.sme.label_tag }}
+        {{ form.sme }}
+    </div>
     <button type="submit" class="btn btn-outline-dark btn-sm">Submit</button>
 </form>
-
-<!-- jQuery and Bootstrap JS -->
-
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
@@ -83,24 +86,4 @@ $(document).ready(function () {
     });
 });
 </script>
-
 {% endblock %}
-
-
-    <h3>Assign Writer to Task</h3>
-
-    <!-- Display form errors -->
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        <ul>
-            {% for field in form %}
-                {% for error in field.errors %}
-                    <li><strong>{{ field.label }}:</strong> {{ error }}</li>
-                {% endfor %}
-            {% endfor %}
-            {% for error in form.non_field_errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
