--- a/dashboard/online_help/templates/online_help/per_subsection_task_test.html
+++ b/dashboard/online_help/templates/online_help/per_subsection_task_test.html
@@ -36,7 +36,7 @@
     <div class="card shadow-sm">
         <div class="card-header bg-info text-white d-flex justify-content-between align-items-center">
             <h5 class="mb-0">Subject Matter Expert (SME)</h5>
-            <button class="btn btn-outline-dark btn-sm" onclick="showAddSME()">Add SME</button>
+            <!-- <button class="btn btn-outline-dark btn-sm" onclick="showAddSME()">Add SME</button> -->
         </div>
         <div class="card-body">
             <div class="mb-3">
@@ -54,10 +54,10 @@
                         </form>
 
                         <div id="sme-buttons">
-                            <a href="?remove_writer={{ sme }}" class="btn btn-sm btn-danger"
+                            <!-- <a href="?remove_writer={{ sme }}" class="btn btn-sm btn-danger"
                             onclick="return confirm('Are you sure you want to remove {{ sme }}?')">
                                 Remove
-                            </a>
+                            </a> -->
                             <button class="btn btn-sm btn-primary ml-2" onclick="editSME()">Edit</button>
                         </div>
                     </div>
