updates pero andaming bugs sa tasks
updates:
per_user_test
tasks_by_color
views.py
per_user_edit_test
per_subsection_edit_test
models.py
forms.py

mga bugs kapag adding and removing document, section, subsection

--- a/dashboard/online_help/templates/online_help/per_user_test.html
+++ b/dashboard/online_help/templates/online_help/per_user_test.html
@@ -20,6 +20,7 @@
 
 
 <div class="row">
+    <p><a href="{% url 'online_help:home_test' %}">← Back to Home</a></p>
     <div class="col-md-6 d-flex">
         <div class="card shadow-sm mb-4 w-100 h-75">
             <div class="card-body">
