--- a/dashboard/online_help/templates/online_help/per_subsection_test.html
+++ b/dashboard/online_help/templates/online_help/per_subsection_test.html
@@ -7,6 +7,7 @@
 
 
 <div class="container mt-5">
+    <p><a href="{% url 'online_help:home_test' %}">← Back to Home</a></p>
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">{{ task.section }}</h2>
