--- a/dashboard/online_help/templates/online_help/per_user_edit_test.html
+++ b/dashboard/online_help/templates/online_help/per_user_edit_test.html
@@ -11,7 +11,7 @@
 <p><strong>Writer:</strong> {{ writer.writer_name }}</p>
 <p><strong>Section:</strong> {{ task.section }}</p>
 <p><strong>Subsection:</strong> {{ task.sub_section }}</p>
-
+<p><strong>SME:</strong> {{ task.SME }}</p>
 <!-- Editable form -->
 <form method="post">
   {% csrf_token %}
