--- a/dashboard/online_help/templates/online_help/per_section_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_test.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="{% static 'css/per_section.css' %}">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
+<p><a href="{% url 'online_help:per_documentation_test' document_pk=document_pk %}">← Back to Document</a></p>
+
+
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
