--- a/dashboard/online_help/templates/online_help/per_documentation_test.html
+++ b/dashboard/online_help/templates/online_help/per_documentation_test.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="{% static 'css/per_documentation.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+<p><a href="{% url 'online_help:tasks_edit_test' %}">← Back to Radiant Documentation</a></p>
+
+
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
