--- a/dashboard/online_help/templates/online_help/per_section_edit_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_edit_test.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="{% static 'css/documentation_edit.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+<p><a href="{% url 'online_help:per_section_test' section_pk=section_pk document_pk=document_pk %}">← Back to Section</a></p>
+
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
