--- a/dashboard/online_help/templates/online_help/per_subsection_test.html
+++ b/dashboard/online_help/templates/online_help/per_subsection_test.html
@@ -24,7 +24,7 @@
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Color</h5>
-                <p class="font-weight-bold text-warning">{{ task.color }}</p>
+                <p class="font-weight-bold" style="color: {{ task.color }};">{{ task.color }}</p>
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Comments</h5>
