--- a/dashboard/online_help/templates/online_help/per_user_test.html
+++ b/dashboard/online_help/templates/online_help/per_user_test.html
@@ -81,7 +81,7 @@
                             </a>
                         </td>
 
-                        <td style="border: 1px solid #444; padding: 8px;">
+                        <td style="border: 1px solid #444; padding: 8px; background-color: {{ taskwriter.task.color }};">
                             {{ taskwriter.task.color }}
                         </td>
 
