SME added per_subsection_test

--- a/dashboard/online_help/templates/online_help/per_subsection_test.html
+++ b/dashboard/online_help/templates/online_help/per_subsection_test.html
@@ -24,11 +24,15 @@
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Color</h5>
-                <p class="font-weight-bold" style="color: {{ task.color }};">{{ task.color }}</p>
+                <p class="font-weight-bold" style="background-color: {{ task.color }};">{{ task.color }}</p>
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Comments</h5>
                 <p class="font-weight-bold">{{ task.comments }}</p>
+            </div>
+            <div class="mb-3">
+                <h5 class="text-muted">SME</h5>
+                <p class="font-weight-bold">{{ task.SME }}</p>
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Completion</h5>
