--- a/dashboard/online_help/templates/online_help/home_test.html
+++ b/dashboard/online_help/templates/online_help/home_test.html
@@ -56,7 +56,7 @@
                                             <tr>
                                                 <th>Section</th>
                                                 <th>Sub</th>
-                                                <th>Color</th>
+                                                <!-- <th>Color</th> -->
                                                 <th>Completion</th>
                                             </tr>
                                         </thead>
@@ -69,9 +69,9 @@
                                                             {{ tk.task.sub_section }}
                                                         </a>
                                                     </td>
-                                                    <td style="background-color: {{ tk.task.color }}; ">
-                                                        {{ tk.task.color }}
-                                                    </td>
+                                                    <!-- <td style="background-color:  tk.task.color ; "> -->
+                                                        <!-- tk.task.color  -->
+                                                    <!-- </td> -->
 
                                                     <td style="background-color: {{ tk.task.color }}; ">{{ tk.task.completion }}</td>
                                                 </tr>
