--- a/dashboard/online_help/templates/online_help/tasks_test.html
+++ b/dashboard/online_help/templates/online_help/tasks_test.html
@@ -32,7 +32,7 @@
                                 <th style="border: 1px solid #444; padding: 8px;">Section</th>
                                 <th style="border: 1px solid #444; padding: 8px;">Subsection</th>
                                 <th style="border: 1px solid #444; padding: 8px;">SME</th>
-                                <th style="border: 1px solid #444; padding: 8px;">Color</th>
+                                <!-- <th style="border: 1px solid #444; padding: 8px;">Color</th> -->
                             </tr>
                         </thead>
                         <tbody>
@@ -46,9 +46,9 @@
                                     <a href="{% url 'online_help:per_subsection_task_test2' tw.task.pk %}" class="hover-link">{{ tw.task.sub_section }}</a>
                                 </td>
                                 <td style="border: 1px solid #444; padding: 8px; background-color: {{ tw.task.color }};">{{ tw.task.SME }}</td>
-                                <td style="border: 1px solid #444; padding: 8px; background-color: {{ tw.task.color }};">
-                                    {{ tw.task.color }}
-                                </td>
+                                <!-- <td style="border: 1px solid #444; padding: 8px; background-color: tw.task.color ;"> -->
+                                    <!-- tw.task.color  -->
+                                <!-- </td> -->
                             </tr>
                             {% empty %}
                             <tr>
