--- a/dashboard/online_help/templates/online_help/per_section_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_test.html
@@ -2,38 +2,33 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/per_section.css' %}">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <p><a href="{% url 'online_help:per_documentation_test' document_pk=document_pk %}">← Back to Document</a></p>
-
 
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">{{ section_name }}</h2>
             <a href="{% url 'online_help:per_section_edit_test' section_pk=section_pk %}" class="btn btn-outline-dark btn-sm">Edit</a>
-
-            <!-- palitan dapat ng url 'online_help:per_section_edit_test' -->
         </div>
         <div class="card-body">
             <div class="mb-3">
-            {% if tasks %}
-
-                {% for task in tasks %}
-                    <h5 class="text-muted">
-                        <a href="{% url 'online_help:per_subsection_task_test' document_pk=document_pk section_pk=task.pk subsection_pk=task.pk %}" class="hover-link text-muted">
-                            {{ task.sub_section }}
-                        </a>
-                    </h5>
-                {% endfor %}
-
-
-            {% else %}
-                <p class="text-muted">No tasks found for this section.</p>
-            {% endif %}
+                {% if tasks %}
+                    {% for sub_section, task in tasks %}
+                        <div>
+                            <h5 class="text-muted">
+                                <a href="{% url 'online_help:per_subsection_task_test' document_pk=document_pk section_pk=section_pk subsection_pk=task.id %}" class="hover-link text-muted">
+                                    {{ sub_section }}
+                                </a>
+                            </h5>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <p class="text-muted">No tasks found for this section.</p>
+                {% endif %}
             </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
