--- a/dashboard/online_help/templates/online_help/tasks_test.html
+++ b/dashboard/online_help/templates/online_help/tasks_test.html
@@ -40,7 +40,8 @@
                             <tr>
                                 <td style="border: 1px solid #444; padding: 8px; background-color: {{ tw.task.color }};">{{ tw.writer.writer_name }}</td>
                                 <td style="border: 1px solid #444; padding: 8px; background-color: {{ tw.task.color }};">
-                                    <a href="{% url 'online_help:per_section_test2' tw.task.pk %}" class="hover-link">{{ tw.task.section }}</a>
+                                    {{ tw.task.section }}
+                                    <!-- ito sana yan kapag hindi disabled url 'online_help:per_section_test2' tw.task.pk -->
                                 </td>
                                 <td style="border: 1px solid #444; padding: 8px; background-color: {{ tw.task.color }};">
                                     <a href="{% url 'online_help:per_subsection_task_test2' tw.task.pk %}" class="hover-link">{{ tw.task.sub_section }}</a>
