{% empty %} not working in documentation_edit_test
still has display bug

--- a/dashboard/online_help/templates/online_help/per_documentation_test.html
+++ b/dashboard/online_help/templates/online_help/per_documentation_test.html
@@ -22,6 +22,8 @@
                             {{ section.section }}
                         </a>
                     </h5>
+                {% empty %}
+                    <p>No sections found for this document.</p>
                 {% endfor %}
             {% else %}
                 <p>No sections found for this document.</p>
